<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MacroCalculator</string>
    <string name="edit_message">Enter a message</string>
    <string name="textView1">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">Consumed Food</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_item">AddItem</string>
    <string name="title_activity_are_you_sure">Are_you_sure</string>

    <!-- - Colors -->
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>

    <!-- - All the following are strings for the Form -->
    <string name="find_food">Search For Food</string>
    <string name="manual_entry">Or Enter Manually</string>
    <string name="food_name">Name</string>
    <string name="food_calories">Calories</string>
    <string name="food_protein">Protein</string>
    <string name="food_carbs">Carbs</string>
    <string name="food_fats">Fat</string>
    <string name="title_activity_user_prefs">UserPrefsActivity</string>

</resources>
