<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.macrocalculator.AddItem"
    tools:ignore="MergeRootFrame" >



    <EditText
        android:id="@+id/SearchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/find_food"
        style="@style/textInput" />

    <ImageButton
        android:id="@+id/SearchButton"
        android:src="@drawable/ic_search_grey600_48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/SearchBar"
        android:layout_alignEnd="@id/SearchBar"
        android:onClick="AddFoodItem"
        android:background="@color/white" />


    <TextView
        android:id="@+id/FooterLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_below="@id/SearchBar"
        android:text="@string/manual_entry"
        android:paddingTop="72dp" />

    <EditText
        android:id="@+id/NameField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/FooterLabel"
        android:ems="10"
        android:hint="@string/food_name"
        style="@style/textInput"
        android:focusable="true" />

    <EditText
        android:id="@+id/CaloriesValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/food_calories"
        android:layout_below="@id/NameField"
        style="@style/textInput"
        android:focusable="true" />

    <EditText
        android:id="@+id/ProteinValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/food_protein"
        android:layout_below="@id/CaloriesValue"
        style="@style/textInput"
        android:focusable="true" />
    
    <EditText
        android:id="@+id/CarbValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/food_carbs"
        android:layout_below="@+id/ProteinValue"
        style="@style/textInput"
        android:focusable="true" />

    
    <EditText
        android:id="@+id/FatValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/food_fats"
        android:layout_below="@+id/CarbValue"
        style="@style/textInput"
        android:focusable="true" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/FatValue"
        android:layout_centerHorizontal="true"
        android:text="Add Item" 
        android:onClick="AddFoodItem"/>

</RelativeLayout>

